--- a/HomeWorAutoShop/style/style.css
+++ b/HomeWorAutoShop/style/style.css
@@ -288,6 +288,13 @@ form {
     
 }
 
+/*----------------footer--------------------*/
+
+.footer {
+    margin-top: 2rem;
+    height: 100px;
+    background-color: #333;
+}
 
 
 
