--- a/Avengers/styles/style.css
+++ b/Avengers/styles/style.css
@@ -180,7 +180,7 @@ ul.ok li {
     z-index: 15;
     display: -ms-flexbox;
     /* display: flex; */
-    -ms-flex-pack: center;
+    
     justify-content: center;
     list-style: none;
 }
@@ -247,13 +247,14 @@ hr {
 
 .main_iron_man {
     position: absolute;
+    /*left: 315px;
+    top: 130px;*/
+    left: 19.5rem;
+    top: 8rem;
 }
 
 img {
     height: 500px;
-    position: relative;
-    left: -180px;
-    top: 80px;
 }
 
 
