change tag in button from <a> to <span>

--- a/Avengers/styles/style.css
+++ b/Avengers/styles/style.css
@@ -63,9 +63,15 @@ body:after {
     padding: 0;
 }
 
+.color_red {
+    color: red;
+}
+
+/*
 span {
  color: red;
 }
+*/
 
 /*------------------ Hamburger -------------*/
 
