--- a/HomeWork-Piano/style/style.css
+++ b/HomeWork-Piano/style/style.css
@@ -1,69 +1,83 @@
-.container{
-}
-.piano {
-/*  justify-content: center;*/
-  perspective: 1000px;
-    transform-style: preserve-3d;
-/*
-    position:relative;
-  float:left;
-*/
-  
-}
 
-.keys {
+
+body{
+    height: 100vh;
+display: flex;
+  align-items: center;
+  justify-content: center;
     
 }
 
+.row {
+    justify-content: center;
+}
 
-
-
+.piano {
+    perspective: 1000px;
+    transform-style: preserve-3d;
+}
 
 button, .key {
-
-  margin:0;
-  padding:0;
-  list-style:none;
-  position:relative;
-  float:left;
-/*    transition: all .1s ease;*/
-    
-     transition: transform 0.2s;
-     
-}
-
-.white {
-
+    background: linear-gradient(to right, red, purple);
+    padding: 11rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    text-align: center;
+    position:relative;
     height:16em;
-      width:4em;
-      z-index:1;
-      border-left:1px solid #bbb;
-      border-bottom:1px solid #bbb;
-      border-radius:0 0 5px 5px;
-      box-shadow:-1px 0 0 rgba(255,255,255,0.8) inset,0 0 5px #ccc inset,0 0 3px rgba(0,0,0,0.2);
-      background:linear-gradient(to bottom,#eee 0%,#fff 100%);
+    width:4em;
+    border-right: 1px solid #000;
+    border-bottom: 1px solid #000;
+    border-radius: 3px 3px 5px 5px;
+    box-shadow:-1px 0 0 rgba(255,255,255,0.8) inset,0 0 5px #ccc inset,0 0 3px rgba(0,0,0,0.2);
+    background:linear-gradient(to bottom,#eee 0%,#fff 100%);
+    margin: 0.2rem;
+    padding:0;
+    transition: transform 0.2s;
 }
 
+.animation {
+    transform: rotateX(-15deg);
+    border-right:3px solid #000;
+    border-bottom: 3px solid #000;
+    border-radius: 3px 3px 5px 5px;
+    background:linear-gradient(to bottom,#b3b3b3 0%,#eee 100%);
+    color: white;
+}
+
+
+
+/*
+.white {
+    display: flex;
+    text-align: center;
+    
+    height:16em;
+    width:4em;
+    z-index:1;
+    border-right:4px solid #eee;
+    border-bottom:4px solid #eee;
+    border-radius:3px 3px 5px 5px;
+    box-shadow:-1px 0 0 rgba(255,255,255,0.8) inset,0 0 5px #ccc inset,0 0 3px rgba(0,0,0,0.2);
+    background:linear-gradient(to bottom,#eee 0%,#fff 100%);
+}
+*/
+
+/*
 .black {
     display: block;
     height:8em;
-  width:2em;
-  margin:0 -1em 0 -1em;
-  z-index:2;
-  border:1px solid #000;
-  border-radius:0 0 3px 3px;
-  box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset,0 -5px 2px 3px rgba(0,0,0,0.6) inset,0 2px 4px rgba(0,0,0,0.5);
-  background:linear-gradient(45deg,#222 0%,#555 100%)
+    width:2em;
+    margin:0 -1em 0 -1em;
+    z-index:2;
+    border:1px solid #000;
+    
+    box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset,0 -5px 2px 3px rgba(0,0,0,0.6) inset,0 2px 4px rgba(0,0,0,0.5);
+    background:linear-gradient(45deg,#222 0%,#555 100%)
     
 }
-
-
-.playing {
-/*    transform: scale(.95);*/
-/*
-    border-color: #196151;
-    box-shadow: 0 0 1rem #196151;
 */
-    
-    
-  }
+
+
+
