--- a/HomeWorkTimer/style/style.css
+++ b/HomeWorkTimer/style/style.css
@@ -1,3 +1,40 @@
+
+* {
+    font-family: 'Inconsolata', monospace;
+    font-weight: 400;
+}
+.
+h1 {
+    text-align: center;
+}
+
+.row {
+    justify-content: center;
+}
+
+.col {
+    margin: 0 3rem;
+    text-align: center;
+}
+
+.tablo {
+    position: absolute;
+top: 36%;
+left: 35%;
+
+}
+
+.btn {
+    width: 120px;
+    height: 40px;
+    background-color: lightskyblue;
+    margin-top: 30px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+
+
 html, body {
     background-color: #64B5F6;
     display: flex;
@@ -19,35 +56,6 @@ html, body {
     transform-origin: center;
     transform: rotate(-90deg);
     transition: storke-dashoffset 0.3s;
-    stroke-dasharray: 50 10;
+    stroke-dasharray: 100 0;
    
-}
-
-h1 {
-    text-align: center;
-}
-
-.row {
-    justify-content: center;
-}
-
-.col {
-    margin: 0 3rem;
-    text-align: center;
-}
-
-.tablo {
-    position: absolute;
-    top: 36%;
-    left: 35%;
-
-}
-
-.btn {
-    width: 120px;
-    height: 40px;
-    background-color: lightskyblue;
-    margin-top: 30px;
-    font-size: 18px;
-    font-weight: 700;
 }
