--- a/HomeWorkAjax/style/index.css
+++ b/HomeWorkAjax/style/index.css
@@ -1,88 +1,39 @@
 body {
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
     background: #383838;
 }
 
-.card {
-    position: relative;
+.carusel {
+    perspective: 600px;
+}
+
+.carusel .carousel-item {
+    width: 400px;
+}
+
+.row  {
+    opacity: 0.9;
     background: #fff;
-    height: 500px;
-    width: 400px;
-    margin: 0 auto;
 }
 
-.card .content {
-    width: 400px; 
-    padding: 30px;
-    box-sizing: border-box;
-}
-
-.card .content a {
-    display: inline-block;
-    margin: 10px 0 0;
-    padding: 10px 20px;
-    text-decoration: none;
-    border: 2px solid #262626;
-    color: #262626;
-    font-weight: 600;
-}
-
-.card .sliderText {
-    position: relative;
-    width: 100%;
-    height: 200px;
+.buttons {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #000;
+    justify-content: space-between;
+    margin: 3rem 1rem;
 }
 
-.card .sliderText h3 {
-    color: #fff;
-    font-size: 3em;
+.btn {
+    border-radius: 5px;
+    opacity: 0.8;
 }
 
-.swiper-slide {
-    width: 400px;
+.aboutPerson{
+    padding: 3rem 2rem;
 }
-
-
-
-.users {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.user {
-  flex-basis: 200px;
-  background: #efefef;
-  margin: 5px;
-  padding: 5px;
-  position: relative;
-}
-
-.user__remove {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  border: none;
-  background: none;
-  font-weight: bold;
-  cursor: pointer;
-}
-.user__remove:hover {
-  background: #fdfdfd;
-}
-
 
 .form {
-/*    position: relative;*/
-  margin: 2em 0.5em;
-  display: flex;
+    margin: 2em 0.5em;
+    display: flex;
     justify-content: center;
 }
