--- a/testShop/style/index.css
+++ b/testShop/style/index.css
@@ -221,8 +221,6 @@ nav{
 	font-size: 12px;
 }
 .container-withBg{
-	position: absolute;
-	right: 15px;
 	height: 9px;
 	display: inline-block;
  padding: 0 5px;
@@ -294,17 +292,43 @@ nav{
  bottom: 17px;
  right: 10px;
 }
+
+.one, .two, .three {
+	position: relative;
+	overflow: hidden;
+	background: #000;
+} 
     
-.one{
+.one::before{
+	content: "";
+	width: 100%;
+	height: 100%;
+ position:absolute;
+ left:0;
+ top:0;
+ opacity:0.7;
 	background: url(../img/threeSimpleSteps/1.png) right no-repeat;
 	background-size: cover;
 }
-.two{
+.two::before{
+	content: "";
+	width: 100%;
+	height: 100%;
+ position:absolute;
+ left:0;
+ top:0;
+ opacity:0.7;
 	background: url(../img/threeSimpleSteps/2.png) right no-repeat;
 	background-size: cover;
 }
-.three{
-	overflow: hidden;
+.three::before{
+	content: "";
+	width: 100%;
+	height: 100%;
+ position:absolute;
+ left:0;
+ top:0;
+ opacity:0.7;
 	background: url(../img/threeSimpleSteps/3.png) right no-repeat;
 	background-size: cover;
 }
@@ -322,13 +346,14 @@ nav{
 	font-size: 42px;
 }
 .choice-coloms{
-	margin-top: 20px;
+	flex-wrap: wrap;
 }
 .choice-coloms, .bigBlock .about-sale{
 	display: flex;
 	justify-content: space-between;
 }
 .bigBlock, .smallBlock{
+	margin-top: 20px;
 	box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
 	overflow: hidden;
 	transition: all .3s linear;
@@ -336,9 +361,7 @@ nav{
 .bigBlock{
  width: 66%;
 }
-.smallBlock{
-	width: 32%;
-}
+
 .bigBlock:hover{
 	transform: scale(1.05, 1.05);
 	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
@@ -441,7 +464,17 @@ nav{
 	position: relative;
 	width: 100%;
 	height: 277px;
-	background: url(../img/allSale/allSale.png) right no-repeat;
+	background: #000;
+}
+.allSale-content::before{
+	content: "";
+	width: 100%;
+	height: 100%;
+ position:absolute;
+ left:0;
+ top:0;
+ opacity:0.7;
+ background: url(../img/allSale/allSale.png) right no-repeat;
 	background-size: cover;
 }
 .content-block{
